--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@alch/alchemy-web3": "^1.1.9",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
+    "sharp": "^0.30.0",
     "twit": "^2.2.11"
   }
 }
