--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.9",
     "axios": "^0.24.0",
+    "discord.js": "^13.6.0",
     "lodash": "^4.17.21",
     "sharp": "^0.30.0",
     "twit": "^2.2.11"
